--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
    <hr>
    <li><a href="My hobbies.html">MY HOBBIES</a></li>
    <br>
-   <li><a href="My contact details.html">CONTACT DETAILS</a></li>
+   <li><a href="my contact details.html">CONTACT DETAILS</a></li>
   </body>
 </html>
